make sure the reporter is z-index above AUT

--- a/packages/reporter/src/runnables/runnables.scss
+++ b/packages/reporter/src/runnables/runnables.scss
@@ -14,6 +14,8 @@
     margin-bottom: 40px;
     padding-left: 0;
     width: 100%;
+    position: relative;
+    z-index: 1;
   }
 
   .runnables {
